# mathspp-cli

./: README.md  pyproject.toml
src/mathspp_cli/: __main__.py  config.py  new.py
src/mathspp_cli/templates/: frontmatter.yaml.template  item.md.template
